refactor, added data to dataSources instead of using altinnWindow

--- a/src/features/expressions/shared-tests/functions/language/should-return-profile-settings-preference.json
+++ b/src/features/expressions/shared-tests/functions/language/should-return-profile-settings-preference.json
@@ -1,13 +1,13 @@
 {
-  "name": "Should return profile selectedAppLanguage",
+  "name": "Should return profileSettingPreference",
   "expression": ["language"],
-  "expects": "nb",
+  "expects": "en",
   "profile": {
     "profile": {
       "profileSettingPreference": {
         "language": "en"
       }
     },
-    "selectedAppLanguage": "nb"
+    "selectedAppLanguage": null
   }
 }
