Simplifying expressions implementation, using langTools instead of text resources directly, and omitting full profile settings (as the backend doesn't have a copy of our internal state)

--- a/src/features/expressions/shared-tests/functions/language/should-return-profile-settings-preference.json
+++ b/src/features/expressions/shared-tests/functions/language/should-return-profile-settings-preference.json
@@ -1,13 +1,8 @@
 {
-  "name": "Should return profileSettingPreference",
+  "name": "Should return profileSetting language if set",
   "expression": ["language"],
   "expects": "en",
-  "profile": {
-    "profile": {
-      "profileSettingPreference": {
-        "language": "en"
-      }
-    },
-    "selectedAppLanguage": null
+  "profileSettings": {
+    "language": "en"
   }
 }
